# mcpay

./: Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
idl/: mcpay_0.json
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
